changes since 1.6:
	- fixes for older gcc compilers (Ruben d'Arco)
	- pptool ignored SYSCONFDIR and only did /etc/powermail (Ruben d'Arco)

Changes since 1.5:
feat    - added LDAP support
bug	- pplistener ignored config-dir (stef)
bug	- all threads share one cwd (oops)
	  (could lead to crashes or theoretically to mail being delivered to the wrong users!)
feat	- add way to override hostname (Marcello Scacchetti)
feat	- support HELO without host (Marcello Scacchetti)
bug	- give proper error code on non-existent email address (Marcello Scacchetti)
feat	- add greetings-banner configuration (Marcello Scacchetti/bert hubert)
bug	- banner now has 'ESMTP' in the right place
impr	- improved startup feedback ('a mailer is already running..')
bug	- textbase accidentally had a mysql dependency	
bug	- moved one gethostbyname to gethostbyname_r
bug	- improved Makefile to honor directory preferences (spotted by Florus Both)
impr	- PowerSMTP 'received' lines now have a timestamp
feat	- monitor mode
feat	- loglevel can be tuned
bug	- silly crash in pptool (fets)
bug	- postgresql couldn't be found (fets)
	
Changes since 1.2:
	- improved some logging
	- added length output to RETR (thanks Peter van Dijk)
	- added STAT output to PASS (thanks Peter van Dijk)
	- improved 'STAT' rfc accuracy (thanks Peter van Dijk)
	- TOP x 0 showed entire message instead of only headers (thanks Peter van Dijk)
	- SMTP HELP message did not include 'QUIT' 

Changes since 1.1.0:
	- Made fallback rules live in the main program and not in the userbase
	    *@blah.com now works for all backends
	    documented too
	- added automatic creation/destruction of threads  DOCUMENT THIS!
	- laid yet more groundwork for more userbases
	    postgresql!
	- added wrong password delay
	- documented the pptool usage command
	- fixed memory leaks
	- fixed pplistener logging 
	- made pptalkers shut down connection properly
	- reduced pplistener logging
	
Changes since 1.0.0:
